# zacli

./: .gitignore  Cargo.toml  README.md
scripts/: add_command.sh
src/: error.rs  main.rs
src/commands/: config.rs  currencies.rs  currency_pairs.rs  depth.rs  mod.rs  trade.rs
src/config/: mod.rs
