[package]
name = "zacli"
version = "0.1.0"
authors = ["yajamon <yajamon.tatsuki@gmail.com>"]
description = "Zaif api client for command line interface"

licence = "MIT"
readme = "README.md"
repository = "https://github.com/yajamon/zacli"
keywords = ["zaif", "api", "cli"]

[dependencies]
zaif-api = "0.5.0"
clap = "2.30.0"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
